--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Ofertas com descontos reais nas principais lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba. Links de afiliado seguros e atualizados." />
-  <meta property="og:title" content="Centro de Compras - Ofertas e Descontos">
-  <meta property="og:description" content="Encontre as melhores ofertas em lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba. Links de afiliados seguros e atualizados!">
-  <meta property="og:image" content="logos/centrodecompras.jpg">
-  <meta property="og:url" content="https://seu-site.com">
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Centro de Compras - Ofertas e Descontos">
-  <meta name="twitter:description" content="Encontre as melhores ofertas em lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba. Links de afiliados seguros e atualizados!">
-  <meta name="twitter:image" content="logos/centrodecompras.jpg">
+  <meta property="og:title" content="Centro de Compras - Ofertas e Descontos" />
+  <meta property="og:description" content="Encontre as melhores ofertas em lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba. Links de afiliados seguros e atualizados!" />
+  <meta property="og:image" content="logos/centrodecompras.jpg" />
+  <meta property="og:url" content="https://seu-site.com" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Centro de Compras - Ofertas e Descontos" />
+  <meta name="twitter:description" content="Encontre as melhores ofertas em lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba. Links de afiliados seguros e atualizados!" />
+  <meta name="twitter:image" content="logos/centrodecompras.jpg" />
   <title>Centro de Compras - Ofertas do Dia</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header class="site-header">
@@ -49,14 +49,15 @@
         <li class="categoria-item" data-categoria="esportes" onclick="filtrarPorCategoria('esportes')" role="button" aria-label="Filtrar por Esportes">Esportes</li>
         <li class="categoria-item" data-categoria="livros" onclick="filtrarPorCategoria('livros')" role="button" aria-label="Filtrar por Livros">Livros</li>
         <li class="categoria-item" data-categoria="infantil" onclick="filtrarPorCategoria('infantil')" role="button" aria-label="Filtrar por Infantil">Infantil</li>
-        <li class="categoria-item" data-categoria="Celulares" onclick="filtrarPorCategoria('Celulares')" role="button" aria-label="Filtrar por Celulares">Celulares</li>
-        <li class="categoria-item" data-categoria="Eletrodomésticos" onclick="filtrarPorCategoria('Eletrodomésticos')" role="button" aria-label="Filtrar por Eletrodomésticos">Eletrodomésticos</li>
+        <li class="categoria-item" data-categoria="celulares" onclick="filtrarPorCategoria('celulares')" role="button" aria-label="Filtrar por Celulares">Celulares</li>
+        <li class="categoria-item" data-categoria="eletrodomesticos" onclick="filtrarPorCategoria('eletrodomesticos')" role="button" aria-label="Filtrar por Eletrodomésticos">Eletrodomésticos</li>
       </ul>
     </aside>
 
     <main>
       <section id="ofertas-section">
         <h2 id="ofertas-titulo">🛍️ Ofertas do Dia</h2>
+
         <div class="lojas-parceiras">
           <h3>🌟 Lojas Parceiras</h3>
           <div class="grid-lojas">
@@ -64,65 +65,59 @@
               <span>Todas as Lojas</span>
             </div>
             <div class="loja" data-loja="amazon" onclick="filtrarPorLoja('amazon')" role="button" aria-label="Filtrar por Amazon">
-              <img src="logos/amazon.png" alt="Logo da Amazon" loading="lazy">
+              <img src="logos/amazon.png" alt="Logo da Amazon" loading="lazy" />
               <span class="amazon">Amazon</span>
             </div>
             <div class="loja" data-loja="magalu" onclick="filtrarPorLoja('magalu')" role="button" aria-label="Filtrar por Magalu">
-              <img src="logos/magalu.png" alt="Logo da Magalu" loading="lazy">
+              <img src="logos/magalu.png" alt="Logo da Magalu" loading="lazy" />
               <span class="magalu">Magalu</span>
             </div>
             <div class="loja" data-loja="shein" onclick="filtrarPorLoja('shein')" role="button" aria-label="Filtrar por Shein">
-              <img src="logos/shein.png" alt="Logo da Shein" loading="lazy">
+              <img src="logos/shein.png" alt="Logo da Shein" loading="lazy" />
               <span class="shein">Shein</span>
             </div>
             <div class="loja" data-loja="shopee" onclick="filtrarPorLoja('shopee')" role="button" aria-label="Filtrar por Shopee">
-              <img src="logos/shopee.png" alt="Logo da Shopee" loading="lazy">
+              <img src="logos/shopee.png" alt="Logo da Shopee" loading="lazy" />
               <span class="shopee">Shopee</span>
             </div>
             <div class="loja" data-loja="mercadolivre" onclick="filtrarPorLoja('mercadolivre')" role="button" aria-label="Filtrar por Mercado Livre">
-              <img src="logos/mercadolivre.jpg" alt="Logo do Mercado Livre" loading="lazy">
+              <img src="logos/mercadolivre.jpg" alt="Logo do Mercado Livre" loading="lazy" />
               <span class="mercadolivre">Mercado Livre</span>
             </div>
             <div class="loja" data-loja="alibaba" onclick="filtrarPorLoja('alibaba')" role="button" aria-label="Filtrar por Alibaba">
-              <img src="logos/alibaba.png" alt="Logo da Alibaba" loading="lazy">
+              <img src="logos/alibaba.png" alt="Logo da Alibaba" loading="lazy" />
               <span class="alibaba">Alibaba</span>
             </div>
           </div>
         </div>
-        <input type="text" id="busca" placeholder="Busque por produtos..." class="barra-busca" aria-label="Buscar produtos" aria-describedby="busca-instrucao">
+
+        <input type="text" id="busca" placeholder="Busque por produtos..." class="barra-busca" aria-label="Buscar produtos" aria-describedby="busca-instrucao" />
         <span id="busca-instrucao" style="display: none;">Digite o nome do produto para filtrar os resultados.</span>
-        <div id="busca-feedback" class="busca-feedback">Buscando...</div>
-        <div class="loading-spinner" id="loading-spinner">Carregando...</div>
+        <div id="busca-feedback" class="busca-feedback" style="display:none;">Buscando...</div>
+        <div class="loading-spinner" id="loading-spinner" style="display:none;">Carregando...</div>
+
         <div class="grid-lojas" id="grid-produtos"></div>
-        <p class="mensagem-vazia" id="mensagem-vazia">Nenhum produto encontrado.</p>
+        <p class="mensagem-vazia" id="mensagem-vazia" style="display:none;">Nenhum produto encontrado.</p>
       </section>
 
-      <a class="whatsapp" href="https://wa.me/5521975179737" target="_blank">📲 Atendimento via WhatsApp</a>
-      <a class="telegram" href="https://t.me/boost/centraldecomprascdc" target="_blank">📢 Canal no Telegram</a>
+      <a class="whatsapp" href="https://wa.me/5521975179737" target="_blank" rel="noopener">📲 Atendimento via WhatsApp</a>
+      <a class="telegram" href="https://t.me/boost/centraldecomprascdc" target="_blank" rel="noopener">📢 Canal no Telegram</a>
 
       <div class="social-links">
-        <a href="https://www.tiktok.com/@cdc.centraldecompas?_t=ZM-8vYQlF9u1dH&_r=1" target="_blank">
-          <div class="icon">
-            <img src="logos/tiktok.png" alt="Ícone do TikTok" loading="lazy">
-          </div>
+        <a href="https://www.tiktok.com/@cdc.centraldecompas?_t=ZM-8vYQlF9u1dH&_r=1" target="_blank" rel="noopener">
+          <div class="icon"><img src="logos/tiktok.png" alt="Ícone do TikTok" loading="lazy" /></div>
           <span>TikTok</span>
         </a>
-        <a href="https://www.instagram.com/cdccentrodecompras/?utm_source=qr&r=nametag" target="_blank">
-          <div class="icon">
-            <img src="logos/instagram.png" alt="Ícone do Instagram" loading="lazy">
-          </div>
+        <a href="https://www.instagram.com/cdccentrodecompras/?utm_source=qr&r=nametag" target="_blank" rel="noopener">
+          <div class="icon"><img src="logos/instagram.png" alt="Ícone do Instagram" loading="lazy" /></div>
           <span>Instagram</span>
         </a>
-        <a href="https://x.com/ComprasCdc" target="_blank">
-          <div class="icon">
-            <img src="logos/x.png" alt="Ícone do X" loading="lazy">
-          </div>
+        <a href="https://x.com/ComprasCdc" target="_blank" rel="noopener">
+          <div class="icon"><img src="logos/x.png" alt="Ícone do X" loading="lazy" /></div>
           <span>X</span>
         </a>
-        <a href="https://www.youtube.com/channel/UCaKHlI-hWqwdAXS6Xsv3ZzA" target="_blank">
-          <div class="icon">
-            <img src="logos/youtube.png" alt="Ícone do YouTube" loading="lazy">
-          </div>
+        <a href="https://www.youtube.com/channel/UCaKHlI-hWqwdAXS6Xsv3ZzA" target="_blank" rel="noopener">
+          <div class="icon"><img src="logos/youtube.png" alt="Ícone do YouTube" loading="lazy" /></div>
           <span>YouTube</span>
         </a>
       </div>
@@ -134,12 +129,118 @@
   </footer>
 
   <div class="robo-assistente">
-    <a href="https://wa.me/5521975179737" target="_blank">
-      <img src="imagens/robo.jpg" alt="Robô Assistente" class="robo-imagem">
+    <a href="https://wa.me/5521975179737" target="_blank" rel="noopener">
+      <img src="imagens/robo.jpg" alt="Robô Assistente" class="robo-imagem" />
       <div class="robo-texto">Posso ajudar?</div>
     </a>
   </div>
 
-  <script src="script.js"></script>
+  <script>
+    // Atualiza o ano no rodapé
+    document.getElementById('year').textContent = new Date().getFullYear();
+
+    const API_URL = 'https://centrodecompra-backend.onrender.com';
+
+    const gridProdutos = document.getElementById('grid-produtos');
+    const buscaInput = document.getElementById('busca');
+    const mensagemVazia = document.getElementById('mensagem-vazia');
+    const loadingSpinner = document.getElementById('loading-spinner');
+    const buscaFeedback = document.getElementById('busca-feedback');
+
+    let produtos = [];
+    let filtroCategoria = 'todas';
+    let filtroLoja = 'todas';
+
+    // Função para carregar produtos do backend
+    async function carregarProdutos() {
+      try {
+        loadingSpinner.style.display = 'block';
+        buscaFeedback.style.display = 'block';
+        const res = await fetch(`${API_URL}/produtos`);
+        produtos = await res.json();
+        loadingSpinner.style.display = 'none';
+        buscaFeedback.style.display = 'none';
+        renderizarProdutos();
+      } catch (error) {
+        loadingSpinner.style.display = 'none';
+        buscaFeedback.style.display = 'none';
+        gridProdutos.innerHTML = '<p>Erro ao carregar produtos.</p>';
+      }
+    }
+
+    // Filtrar e renderizar produtos
+    function renderizarProdutos() {
+      const buscaValor = buscaInput.value.toLowerCase();
+
+      let produtosFiltrados = produtos.filter(p => {
+        const correspondeCategoria = filtroCategoria === 'todas' || p.categoria === filtroCategoria;
+        const correspondeLoja = filtroLoja === 'todas' || p.loja === filtroLoja;
+        const correspondeBusca = p.nome.toLowerCase().includes(buscaValor);
+        return correspondeCategoria && correspondeLoja && correspondeBusca;
+      });
+
+      if (produtosFiltrados.length === 0) {
+        mensagemVazia.style.display = 'block';
+      } else {
+        mensagemVazia.style.display = 'none';
+      }
+
+      gridProdutos.innerHTML = produtosFiltrados.map(p => `
+        <div class="card-produto" role="article" tabindex="0" aria-label="Produto ${p.nome}, preço R$${p.preco}">
+          <img src="/uploads/${p.imagem}" alt="${p.nome}" loading="lazy" />
+          <div class="detalhes-produto">
+            <h4>${p.nome}</h4>
+            <p>Categoria: ${p.categoria}</p>
+            <p class="preco">R$ ${p.preco.toFixed(2).replace('.', ',')}</p>
+            <a href="${p.link}" target="_blank" rel="noopener" aria-label="Comprar ${p.nome} na loja ${p.loja}">Comprar</a>
+          </div>
+        </div>
+      `).join('');
+    }
+
+    // Filtrar por categoria
+    function filtrarPorCategoria(categoria) {
+      filtroCategoria = categoria;
+      atualizarAtivoCategoria();
+      renderizarProdutos();
+    }
+
+    // Atualiza o item ativo da categoria
+    function atualizarAtivoCategoria() {
+      document.querySelectorAll('.categoria-item').forEach(el => {
+        el.classList.toggle('ativa', el.getAttribute('data-categoria') === filtroCategoria);
+      });
+    }
+
+    // Filtrar por loja
+    function filtrarPorLoja(loja) {
+      filtroLoja = loja;
+      atualizarAtivoLoja();
+      renderizarProdutos();
+    }
+
+    // Atualiza o item ativo da loja
+    function atualizarAtivoLoja() {
+      document.querySelectorAll('.loja').forEach(el => {
+        el.classList.remove('ativa');
+      });
+      document.querySelectorAll('.loja-todas').forEach(el => {
+        el.classList.remove('ativa');
+      });
+      if (filtroLoja === 'todas') {
+        document.querySelector('.loja-todas').classList.add('ativa');
+      } else {
+        const lojaEl = document.querySelector(`.loja[data-loja="${filtroLoja}"]`);
+        if (lojaEl) lojaEl.classList.add('ativa');
+      }
+    }
+
+    buscaInput.addEventListener('input', () => {
+      renderizarProdutos();
+    });
+
+    // Inicializa o carregamento
+    carregarProdutos();
+  </script>
 </body>
 </html>
