--- a/admin-xyz-123.html
+++ b/admin-xyz-123.html
@@ -9,7 +9,8 @@
     body { font-family: 'Roboto', Arial, sans-serif; padding: 20px; background-color: #f5f5f5; }
     h1, h3 { text-align: center; color: #333; }
     form { max-width: 500px; margin: auto; display: flex; flex-direction: column; gap: 10px; background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
-    input, select, button { padding: 10px; border: 1px solid #ddd; border-radius: 4px; font-size: 16px; }
+    input, select, textarea, button { padding: 10px; border: 1px solid #ddd; border-radius: 4px; font-size: 16px; }
+    textarea { resize: vertical; min-height: 100px; }
     button { background-color: #ff6200; color: white; border: none; cursor: pointer; font-weight: bold; }
     button:hover { background-color: #e55a00; }
     #mensagem { margin-top: 10px; color: green; text-align: center; }
@@ -27,6 +28,7 @@
   <h1>Adicionar Produto</h1>
   <form id="form-produto" enctype="multipart/form-data">
     <input type="text" name="nome" placeholder="Nome do produto" required />
+    <textarea name="descricao" placeholder="Descrição do produto" required></textarea>
     <select name="categoria" required>
       <option value="" disabled selected>Selecione uma categoria</option>
       <option value="eletronicos">Eletrônicos</option>
@@ -37,8 +39,8 @@
       <option value="esportes">Esportes</option>
       <option value="livros">Livros</option>
       <option value="infantil">Infantil</option>
-      <option value="celulares">Celulares</option>
-      <option value="eletrodomesticos">Eletrodomésticos</option>
+      <option value="Celulares">Celulares</option>
+      <option value="Eletrodomésticos">Eletrodomésticos</option>
     </select>
     <select name="loja" required>
       <option value="" disabled selected>Selecione uma loja</option>
@@ -51,7 +53,7 @@
     </select>
     <input type="url" name="link" placeholder="Link do produto (https://...)" required pattern="https?://.+" />
     <input type="number" name="preco" placeholder="Preço do produto (ex.: 99.99)" step="0.01" min="0" required />
-    <input type="file" name="imagens" accept="image/*" multiple />
+    <input type="file" name="imagens" accept="image/*" multiple required />
     <button type="submit">Adicionar</button>
   </form>
   <div id="mensagem"></div>
@@ -63,6 +65,7 @@
       <thead>
         <tr>
           <th>Nome</th>
+          <th>Descrição</th>
           <th>Categoria</th>
           <th>Loja</th>
           <th>Link</th>
@@ -72,7 +75,7 @@
         </tr>
       </thead>
       <tbody id="lista-produtos">
-        <tr><td colspan="7" style="text-align:center;">Carregando produtos...</td></tr>
+        <tr><td colspan="8" style="text-align:center;">Carregando produtos...</td></tr>
       </tbody>
     </table>
   </div>
@@ -87,7 +90,7 @@
         const produtos = await res.json();
         preencherTabela(produtos);
       } catch (err) {
-        document.getElementById('lista-produtos').innerHTML = `<tr><td colspan="7" style="color:red;text-align:center;">${err.message}</td></tr>`;
+        document.getElementById('lista-produtos').innerHTML = `<tr><td colspan="8" style="color:red;text-align:center;">${err.message}</td></tr>`;
       }
     }
 
@@ -95,7 +98,7 @@
       const tbody = document.getElementById('lista-produtos');
       tbody.innerHTML = '';
       if (produtos.length === 0) {
-        tbody.innerHTML = '<tr><td colspan="7" style="text-align:center;">Nenhum produto cadastrado.</td></tr>';
+        tbody.innerHTML = '<tr><td colspan="8" style="text-align:center;">Nenhum produto cadastrado.</td></tr>';
         return;
       }
       produtos.forEach((produto) => {
@@ -108,6 +111,7 @@
         tbody.innerHTML += `
           <tr>
             <td>${produto.nome}</td>
+            <td>${produto.descricao || 'N/A'}</td>
             <td>${produto.categoria}</td>
             <td>${produto.loja}</td>
             <td><a href="${produto.link}" target="_blank" rel="noopener noreferrer">Link</a></td>
@@ -131,7 +135,6 @@
       }
     }
 
-    // Envio do formulário com imagens
     document.getElementById('form-produto').addEventListener('submit', async (event) => {
       event.preventDefault();
       const form = event.target;
@@ -147,7 +150,7 @@
         });
         if (!res.ok) {
           const erroJson = await res.json().catch(() => null);
-          throw new Error(erroJson?.message || 'Erro ao adicionar produto');
+          throw new Error(erroJson?.error || 'Erro ao adicionar produto');
         }
         document.getElementById('mensagem').textContent = 'Produto adicionado com sucesso!';
         form.reset();
