--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
         </div>
         <input type="text" id="busca" placeholder="Busque por produtos..." class="barra-busca" aria-label="Buscar produtos" aria-describedby="busca-instrucao">
         <span id="busca-instrucao" style="display: none;">Digite o nome do produto para filtrar os resultados.</span>
-        <div id="busca-feedback" class="busca-feedback">Buscando...</div>
+        <div id="busca-feedback" class="busca-feedback"></div>
         <div class="loading-spinner" id="loading-spinner"></div>
-        <div class="grid-lojas" id="grid-produtos"></div>
-        <p class="mensagem-vazia" id="mensagem-vazia">Nenhum produto encontrado.</p>
+        <div class="grid-produtos" id="grid-produtos"></div>
+        <p class="mensagem-vazia" id="mensagem-vazia" style="display: none;">Nenhum produto encontrado.</p>
         <p class="error-message" id="error-message" style="display: none;"></p>
       </section>
 
@@ -132,7 +132,7 @@
 
   <div class="modal" id="imageModal">
     <button class="modal-close" onclick="closeModal()">✕</button>
-    <div class="modal-content" id="modalCarrossel">
+    <div class="modal-content">
       <div class="carrossel-imagens" id="modalCarrosselImagens"></div>
       <button class="carrossel-prev" onclick="moveModalCarrossel(-1)">◄</button>
       <button class="carrossel-next" onclick="moveModalCarrossel(1)">►</button>
