--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <span id="busca-instrucao" style="display: none;">Digite o nome do produto para filtrar os resultados.</span>
         <div id="busca-feedback" class="busca-feedback"></div>
         <div class="loading-spinner" id="loading-spinner"></div>
-        <div class="grid-produtos" id="grid-produtos"></div>
+        <div class="grid-lojas" id="grid-produtos"></div>
         <p class="mensagem-vazia" id="mensagem-vazia" style="display: none;">Nenhum produto encontrado.</p>
         <p class="error-message" id="error-message" style="display: none;"></p>
       </section>
