--- a/index.html
+++ b/index.html
@@ -1,82 +1,161 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Centro de Compra - Encontre os melhores produtos em diversas lojas online.">
-    <title>Centro de Compra</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="style-fullscreen.css"> <!-- Novo CSS -->
-    <link rel="icon" href="logos/centrodecompras.jpg" type="image/jpeg">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Ofertas com descontos reais nas principais lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba. Links de afiliado seguros e atualizados.">
+  <meta property="og:title" content="Centro de Compras - Ofertas e Descontos">
+  <meta property="og:description" content="Encontre as melhores ofertas em lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba. Links de afiliados seguros e atualizados!">
+  <meta property="og:image" content="logos/centrodecompras.jpg">
+  <meta property="og:url" content="https://centrodecompra.com.br/">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Centro de Compras - Ofertas e Descontos">
+  <meta name="twitter:description" content="Encontre as melhores ofertas em lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba. Links de afiliados seguros e atualizados!">
+  <meta name="twitter:image" content="logos/centrodecompras.jpg">
+  <title>Centro de Compras - Ofertas do Dia</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <div class="header-container">
-            <img src="logos/centrodecompras.jpg" alt="Logo Centro de Compra" id="site-logo" class="site-logo">
-            <h1>Centro de Compra</h1>
-        </div>
-        <div id="filtros">
-            <input type="text" id="busca" placeholder="Buscar produtos...">
-            <span id="busca-feedback"></span>
-            <div class="categorias">
-                <span class="categoria-item" data-categoria="todas" onclick="filtrarPorCategoria('todas')">Todas</span>
-                <span class="categoria-item" data-categoria="eletronicos" onclick="filtrarPorCategoria('eletronicos')">Eletrônicos</span>
-                <span class="categoria-item" data-categoria="moda" onclick="filtrarPorCategoria('moda')">Moda</span>
-                <span class="categoria-item" data-categoria="fitness" onclick="filtrarPorCategoria('fitness')">Fitness</span>
-                <span class="categoria-item" data-categoria="casa" onclick="filtrarPorCategoria('casa')">Casa</span>
-                <span class="categoria-item" data-categoria="beleza" onclick="filtrarPorCategoria('beleza')">Beleza</span>
-                <span class="categoria-item" data-categoria="esportes" onclick="filtrarPorCategoria('esportes')">Esportes</span>
-                <span class="categoria-item" data-categoria="livros" onclick="filtrarPorCategoria('livros')">Livros</span>
-                <span class="categoria-item" data-categoria="infantil" onclick="filtrarPorCategoria('infantil')">Infantil</span>
-                <span class="categoria-item" data-categoria="Celulares" onclick="filtrarPorCategoria('Celulares')">Celulares</span>
-                <span class="categoria-item" data-categoria="Eletrodomesticos" onclick="filtrarPorCategoria('Eletrodomesticos')">Eletrodomésticos</span>
-            </div>
-        </div>
-    </header>
-    <main>
-        <section id="hero">
-            <h2>Bem-vindo ao Centro de Compra!</h2>
-            <p>Encontre os melhores produtos das lojas mais confiáveis.</p>
-            <div class="lojas">
-                <img src="logos/amazon.png" alt="Amazon" class="loja" data-loja="amazon" onclick="filtrarPorLoja('amazon')">
-                <img src="logos/mercadolivre.png" alt="Mercado Livre" class="loja" data-loja="mercadolivre" onclick="filtrarPorLoja('mercadolivre')">
-                <img src="logos/magalu.png" alt="Magalu" class="loja" data-loja="magalu" onclick="filtrarPorLoja('magalu')">
-                <img src="logos/shein.png" alt="Shein" class="loja" data-loja="shein" onclick="filtrarPorLoja('shein')">
-                <img src="logos/shopee.png" alt="Shopee" class="loja" data-loja="shopee" onclick="filtrarPorLoja('shopee')">
-                <img src="logos/alibaba.png" alt="Alibaba" class="loja" data-loja="alibaba" onclick="filtrarPorLoja('alibaba')">
-                <img src="logos/todas.png" alt="Todas" class="loja-todas" data-loja="todas" onclick="filtrarPorLoja('todas')">
-            </div>
-        </section>
-        <div id="loading-spinner" style="display: none;">Carregando...</div>
-        <div id="mensagem-vazia" style="display: none;">Nenhum produto encontrado.</div>
-        <div id="error-message" style="display: none;"></div>
-        <div id="grid-produtos" class="grid-lojas"></div>
-        <div id="paginacao">
-            <button id="prev-page" disabled>Anterior</button>
-            <span id="page-info">Página 1 de 50</span>
-            <button id="next-page">Próxima</button>
-        </div>
-    </main>
-    <footer>
-        <div class="footer-container">
-            <div class="footer-links">
-                <a href="https://t.me/centrodecompras" target="_blank" class="telegram">Telegram</a>
-                <a href="https://chat.whatsapp.com/centrodecompras" target="_blank" class="whatsapp">WhatsApp</a>
-            </div>
-            <p>&copy; <span id="year"></span> Centro de Compra. Todos os direitos reservados.</p>
-        </div>
-    </footer>
-    <div id="imageModal" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeModal()">&times;</span>
-            <div class="modal-carrossel">
-                <button class="carrossel-prev" onclick="moveModalCarrossel(-1)">◄</button>
-                <div id="modalCarrosselImagens" class="carrossel-imagens"></div>
-                <button class="carrossel-next" onclick="moveModalCarrossel(1)">▶</button>
-                <div id="modalCarrosselDots" class="carrossel-dots"></div>
-            </div>
-        </div>
+  <header class="site-header">
+    <div class="logo-container">
+      <a href="#">
+        <img src="logos/centrodecompras.jpg" alt="Centro de Compras" loading="lazy" id="site-logo">
+      </a>
     </div>
-    <script src="script.js"></script>
+    <div class="header-text">
+      <h1>Centro de Compras</h1>
+      <p>O maior portal de ofertas do Brasil! Descubra as melhores oportunidades nos maiores sites de venda, com links diretos para sua compra.</p>
+    </div>
+  </header>
+
+  <nav>
+    <a href="index.html">Promoções</a>
+    <a href="cupom.html">Cupom de desconto</a>
+    <a href="sobre.html">Sobre</a>
+    <a href="contato.html">Contato</a>
+  </nav>
+
+  <div class="container">
+    <aside class="sidebar-categorias">
+      <h3>Categorias</h3>
+      <ul>
+        <li class="categoria-item ativa" data-categoria="todas" onclick="filtrarPorCategoria('todas')">Todas as Categorias</li>
+        <li class="categoria-item" data-categoria="eletronicos" onclick="filtrarPorCategoria('eletronicos')">Eletrônicos</li>
+        <li class="categoria-item" data-categoria="moda" onclick="filtrarPorCategoria('moda')">Moda</li>
+        <li class="categoria-item" data-categoria="fitness" onclick="filtrarPorCategoria('fitness')">Fitness</li>
+        <li class="categoria-item" data-categoria="casa" onclick="filtrarPorCategoria('casa')">Casa e Decoração</li>
+        <li class="categoria-item" data-categoria="beleza" onclick="filtrarPorCategoria('beleza')">Beleza</li>
+        <li class="categoria-item" data-categoria="esportes" onclick="filtrarPorCategoria('esportes')">Esportes</li>
+        <li class="categoria-item" data-categoria="livros" onclick="filtrarPorCategoria('livros')">Livros</li>
+        <li class="categoria-item" data-categoria="infantil" onclick="filtrarPorCategoria('infantil')">Infantil</li>
+        <li class="categoria-item" data-categoria="Celulares" onclick="filtrarPorCategoria('Celulares')">Celulares</li>
+        <li class="categoria-item" data-categoria="Eletrodomésticos" onclick="filtrarPorCategoria('Eletrodomésticos')">Eletrodomésticos</li>
+      </ul>
+    </aside>
+
+    <main>
+      <section id="ofertas-section">
+        <h2 id="ofertas-titulo">🛍️ Ofertas do Dia</h2>
+        <div class="lojas-parceiras">
+          <h3>🌟 Lojas Parceiras</h3>
+          <div class="grid-lojas">
+            <div class="loja-todas ativa" onclick="filtrarPorLoja('todas')">
+              <span>Todas as Lojas</span>
+            </div>
+            <div class="loja" data-loja="amazon" onclick="filtrarPorLoja('amazon')">
+              <img src="logos/amazon.png" alt="Logo da Amazon" loading="lazy">
+              <span class="amazon">Amazon</span>
+            </div>
+            <div class="loja" data-loja="magalu" onclick="filtrarPorLoja('magalu')">
+              <img src="logos/magalu.png" alt="Logo da Magalu" loading="lazy">
+              <span class="magalu">Magalu</span>
+            </div>
+            <div class="loja" data-loja="shein" onclick="filtrarPorLoja('shein')">
+              <img src="logos/shein.png" alt="Logo da Shein" loading="lazy">
+              <span class="shein">Shein</span>
+            </div>
+            <div class="loja" data-loja="shopee" onclick="filtrarPorLoja('shopee')">
+              <img src="logos/shopee.png" alt="Logo da Shopee" loading="lazy">
+              <span class="shopee">Shopee</span>
+            </div>
+            <div class="loja" data-loja="mercadolivre" onclick="filtrarPorLoja('mercadolivre')">
+              <img src="logos/mercadolivre.jpg" alt="Logo do Mercado Livre" loading="lazy">
+              <span class="mercadolivre">Mercado Livre</span>
+            </div>
+            <div class="loja" data-loja="alibaba" onclick="filtrarPorLoja('alibaba')">
+              <img src="logos/alibaba.png" alt="Logo da Alibaba" loading="lazy">
+              <span class="alibaba">Alibaba</span>
+            </div>
+          </div>
+        </div>
+        <input type="text" id="busca" placeholder="Busque por produtos..." class="barra-busca">
+        <div id="busca-feedback" class="busca-feedback"></div>
+        <div class="loading-spinner" id="loading-spinner"></div>
+        <div class="grid-lojas" id="grid-produtos"></div>
+        <p class="mensagem-vazia" id="mensagem-vazia" style="display: none;">Nenhum produto encontrado.</p>
+        <p class="error-message" id="error-message" style="display: none;">></p>
+        <div id="paginacao" class="paginacao">
+            <button id="prev-page" disabled>Anterior</button>
+            <span id="page-info">Página 1</span>
+            <button id="next-page">Próxima</button>
+          </div>
+        </div>
+      </section>
+
+      <a href="whatsapp" class="whatsapp" href="https://wa.me/5521975179737" target="_blank">📲 Atendimento via WhatsApp</a>
+      <a href="#https://t.me/boost/centraldecomprascdc" target="_blank">📢 Canal no Telegram</a>
+      <a class="telegram" href="https://t.me/boost/centraldecomprascdc" target="_blank">📢 Canal no Telegram</a>
+
+      <div class="social-links">
+      <div class="social-links">
+        <a href="https://www.tiktok.com/@cdc.centraldecompas?_t=ZM-8vYQlF9u1dH?_r=1" target="_blank">
+        <a target="_blank"> target="_blank">
+          <div class="icon"><img src="logos/tiktok.jpg" alt="TikTok" loading="lazy"></div>
+          <span>TikTok</span>
+        </span>TikTok</span>
+        </a>
+        <a href="https://www.instagram.com/cdccentrodecompras/?utm_source=qr&r=nametag" target="_blank">
+        <a href="https://www.instagram.com/cdccentrodecompras/?utm_source=qr&utm_source=qr&target="_blank">
+          <div class="icon"><img src="logos/instagram.png" alt="Instagram" loading="lazy" alt="Instagram"></div>
+          <span>Instagram</span>
+        </span>
+        </a>
+        <a href="https://x.com/ComprasCdc" target="_blank">
+          <a href="https://x.com/ComprasCdc" target="_blank">
+            <div class="icon"><img src="logos/x.png" alt="X" loading="lazy"></div>
+            <span>X</span>
+          </div>
+        </a>
+        <a href="https://www.youtube.com/channel/UCaKHlI-hWqwdAXS6Xsv3ZzA" target="_blank">
+          <div class="icon"><img src="logos/youtube.png" alt="YouTube" loading="lazy"></div>
+          <span>YouTube</span>
+        </a>
+      </div>
+    </main>
+  </div>
+
+  <div class="modal" id="imageModal">
+    <button class="modal-close" onclick="closeModal()">✕</button>
+    <div class="modal-content">
+      <div class="carrossel-imagens" id="modalCarrosselImagens"></div>
+      <button class="carrossel-prev" onclick="moveModalCarrossel(-1)">◄</button>
+      <button class="carrossel-next" onclick="moveModalCarrossel(1)">▶</button>
+      <div class="carrossel-dots" id="modalCarrosselDots"></div>
+    </div>
+  </div>
+
+  <footer>
+    <p>🔧 Todos os direitos reservados <strong>Grupo Centro de Compra "CdC"></strong> © <span id="year"></span></p>
+  </footer>
+
+  <div class="robo-assistente">
+    <a href="https://wa.me/5521975179737" target="_blank">
+      <img src="imagens/robo.jpg" alt="Robô Assistente" class="robo-imagem" loading="lazy">
+      <div class="robo-texto">Posso ajudar?</div>
+    </a>
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
