--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </a>
     </div>
     <div class="header-text">
-      <h1>Centro de Compras</h1>
+      <h1>Centro de Compra</h1>
       <p>O maior portal de ofertas do Brasil! Descubra as melhores oportunidades nos maiores sites de venda, com links diretos para sua compra.</p>
     </div>
   </header>
