--- a/index.html
+++ b/index.html
@@ -6,28 +6,25 @@
   <meta name="description" content="Ofertas com descontos reais nas principais lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba. Links de afiliado seguros e atualizados.">
   <meta property="og:title" content="Centro de Compras - Ofertas e Descontos">
   <meta property="og:description" content="Encontre as melhores ofertas em lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba. Links de afiliados seguros e atualizados!">
-  <meta property="og:image" content="logos/webp/centrodecompras.webp">
+  <meta property="og:image" content="logos/centrodecompras.jpg">
   <meta property="og:url" content="https://centrodecompra.com.br/">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Centro de Compras - Ofertas e Descontos">
   <meta name="twitter:description" content="Encontre as melhores ofertas em lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba. Links de afiliados seguros e atualizados!">
-  <meta name="twitter:image" content="logos/webp/centrodecompras.webp">
+  <meta name="twitter:image" content="logos/centrodecompras.jpg">
   <title>Centro de Compras - Ofertas do Dia</title>
   <!-- Pré-carregamento de recursos críticos -->
-  <link rel="preload" href="logos/webp/centrodecompras.webp" as="image">
+  <link rel="preload" href="logos/centrodecompras.jpg" as="image">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" media="print" onload="this.media='all'">
 </head>
 <body>
   <header class="site-header">
     <div class="logo-container">
       <a href="#">
-        <picture>
-          <source srcset="logos/webp/centrodecompras.webp" type="image/webp">
-          <img src="logos/centrodecompras.jpg" alt="Centro de Compras" id="site-logo" width="150" height="50">
-        </picture>
+        <img src="logos/centrodecompras.jpg" alt="Centro de Compras" id="site-logo" width="150" height="50">
       </a>
     </div>
     <div class="header-text">
@@ -71,45 +68,27 @@
               <span>Todas as Lojas</span>
             </div>
             <div class="loja" data-loja="amazon" onclick="filtrarPorLoja('amazon')">
-              <picture>
-                <source srcset="logos/webp/amazon.webp" type="image/webp">
-                <img src="logos/amazon.png" alt="Amazon" loading="lazy" width="100" height="40">
-              </picture>
+              <img src="logos/amazon.png" alt="Amazon" loading="lazy" width="100" height="40">
               <span>Amazon</span>
             </div>
             <div class="loja" data-loja="magalu" onclick="filtrarPorLoja('magalu')">
-              <picture>
-                <source srcset="logos/webp/magalu.webp" type="image/webp">
-                <img src="logos/magalu.png" alt="Magalu" loading="lazy" width="100" height="40">
-              </picture>
+              <img src="logos/magalu.png" alt="Magalu" loading="lazy" width="100" height="40">
               <span>Magalu</span>
             </div>
             <div class="loja" data-loja="shein" onclick="filtrarPorLoja('shein')">
-              <picture>
-                <source srcset="logos/webp/shein.webp" type="image/webp">
-                <img src="logos/shein.png" alt="Shein" loading="lazy" width="100" height="40">
-              </picture>
+              <img src="logos/shein.png" alt="Shein" loading="lazy" width="100" height="40">
               <span>Shein</span>
             </div>
             <div class="loja" data-loja="shopee" onclick="filtrarPorLoja('shopee')">
-              <picture>
-                <source srcset="logos/webp/shopee.webp" type="image/webp">
-                <img src="logos/shopee.png" alt="Shopee" loading="lazy" width="100" height="40">
-              </picture>
+              <img src="logos/shopee.png" alt="Shopee" loading="lazy" width="100" height="40">
               <span>Shopee</span>
             </div>
             <div class="loja" data-loja="mercadolivre" onclick="filtrarPorLoja('mercadolivre')">
-              <picture>
-                <source srcset="logos/webp/mercadolivre.webp" type="image/webp">
-                <img src="logos/mercadolivre.jpg" alt="Mercado Livre" loading="lazy" width="100" height="40">
-              </picture>
+              <img src="logos/mercadolivre.jpg" alt="Mercado Livre" loading="lazy" width="100" height="40">
               <span>Mercado Livre</span>
             </div>
             <div class="loja" data-loja="alibaba" onclick="filtrarPorLoja('alibaba')">
-              <picture>
-                <source srcset="logos/webp/alibaba.webp" type="image/webp">
-                <img src="logos/alibaba.png" alt="Alibaba" loading="lazy" width="100" height="40">
-              </picture>
+              <img src="logos/alibaba.png" alt="Alibaba" loading="lazy" width="100" height="40">
               <span>Alibaba</span>
             </div>
           </div>
@@ -130,37 +109,25 @@
       <div class="social-links">
         <a href="https://www.tiktok.com/@cdc.centraldecompras" target="_blank">
           <div class="icon">
-            <picture>
-              <source srcset="logos/webp/tiktok.webp" type="image/webp">
-              <img src="logos/tiktok.jpg" alt="TikTok" loading="lazy" width="40" height="40">
-            </picture>
+            <img src="logos/tiktok.jpg" alt="TikTok" loading="lazy" width="40" height="40">
           </div>
           <span>TikTok</span>
         </a>
         <a href="https://www.instagram.com/cdccentrodecompras/" target="_blank">
           <div class="icon">
-            <picture>
-              <source srcset="logos/webp/instagram.webp" type="image/webp">
-              <img src="logos/instagram.jpg" alt="Instagram" loading="lazy" width="40" height="40">
-            </picture>
+            <img src="logos/instagram.jpg" alt="Instagram" loading="lazy" width="40" height="40">
           </div>
           <span>Instagram</span>
         </a>
         <a href="https://x.com/ComprasCdc" target="_blank">
           <div class="icon">
-            <picture>
-              <source srcset="logos/webp/x.webp" type="image/webp">
-              <img src="logos/x.png" alt="X" loading="lazy" width="40" height="40">
-            </picture>
+            <img src="logos/x.png" alt="X" loading="lazy" width="40" height="40">
           </div>
           <span>X</span>
         </a>
         <a href="https://www.youtube.com/channel/UCaKHlI-hWqwdAXS6Xsv3ZzA" target="_blank">
           <div class="icon">
-            <picture>
-              <source srcset="logos/webp/youtube.webp" type="image/webp">
-              <img src="logos/youtube.png" alt="YouTube" loading="lazy" width="40" height="40">
-            </picture>
+            <img src="logos/youtube.png" alt="YouTube" loading="lazy" width="40" height="40">
           </div>
           <span>YouTube</span>
         </a>
@@ -187,10 +154,7 @@
 
   <div class="robo-assistente">
     <a href="https://wa.me/5521975179737" target="_blank">
-      <picture>
-        <source srcset="imagens/webp/robo.webp" type="image/webp">
-        <img src="imagens/robo.jpg" alt="Robô Assistente" class="robo-imagem" loading="lazy" width="60" height="60">
-      </picture>
+      <img src="imagens/robo.jpg" alt="Robô Assistente" class="robo-imagem" loading="lazy" width="80" height="80">
       <div class="robo-texto">Posso ajudar?</div>
     </a>
   </div>
